# dogslow-sentry

./: .gitignore  .hgignore  .pylintrc  COPYING.txt  Justfile  MANIFEST.in  Makefile  README.rst  README.txt  bitbucket-pipelines.yml  deploy.py  deploy.sh  pyproject.toml  setup.py  test-requirements.txt  tests.py  tox.ini
.github/: renovate.json
.github/workflows/: tests.yml
django_watchdog/: __init__.py
dogslow/: __init__.py  timer.py
dogslow_sentry/: __init__.py  timer.py
scripts/: release.sh
tests/: conftest.py  tests.py  urls.py
